--- a/templates/booking_details.html
+++ b/templates/booking_details.html
@@ -12,8 +12,11 @@
         <li>{{ object.customer }}</li>
         <li>Date: {{ object.day }}</li>
         <li>Time: {{ object.time }}</li>
-        <li>Attendence: {{ object.guest }}</li>
-    
+        <li>Attendence: {{ object.guests }}</li>
+        <li>
+            <button type="submit"><a href="{% url 'delete_booking' object.pk %}">Cancel Booking</a></button>
+        </li>
+
         <hr/>
         <!-- If object_list is empty  -->
         {% empty %}
