--- a/templates/delete_booking.html
+++ b/templates/delete_booking.html
@@ -4,7 +4,7 @@
     <form method="post">
     {% csrf_token %}
         <p>Are you sure you want to delete "{{ object }}"?</p>
-        <input type="submit" value="Confirm">
+        <button type="submit" class="btn btn-dark btn-sm">Confirm</button>
     </form>
 {% else %}
     <p>You do not have permission to delete this booking.</p>
