Update styling for booking form

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
                     {% endif %}
                 </ul>
                 <span class="navbar-text text-muted">
-                    best burgers in town
+                    text
                 </span>
             </div>
         </div>
