update home page and move booking form content to new page.

--- a/templates/booking_form.html
+++ b/templates/booking_form.html
@@ -1,14 +1,19 @@
 {% extends "base.html" %}
-
 {% block content %}
 <form method="POST" enctype="multipart/form-data">
- 
-    <!-- Security token -->
-    {% csrf_token %}
- 
-    <!-- Using the formset -->
-    {{ form.as_p }}
-     
-    <input type="submit" value="Submit">
+    <div class="form-group">
+        <h3 class="booking-header">Booking:</h3>
+        <!-- Security token -->
+        {% csrf_token %}
+
+        <!-- Using the formset -->
+        {{ form }}
+        <ul class="messages">
+            {% for message in messages %}
+            <li><b style="color: red;">{{ message }}</b></li>
+            {% endfor %}
+        </ul>
+        <button type="submit" class="btn btn-dark btn-md">Submit</button>
+    </div>
 </form>
 {%endblock%}
