--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">S<span class="red-o">A</span>M<span
-                        class="thin"><i class="fas fa-hamburger"></i>burgers</span></span></span></a>
+                        class="thin"><i class="fas fa-hamburger"></i>burger</span></span></span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -54,7 +54,7 @@
                     {% endif %}
                 </ul>
                 <span class="navbar-text text-muted">
-                    text
+                    Hamburger? No, it's Samburger!
                 </span>
             </div>
         </div>
@@ -68,7 +68,6 @@
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center">Made by Code Instituters</p>
         <p class="m-0 text-center">Follow us: <i class="fab fa-facebook-square ms-3"></i>
             <i class="fab fa-twitter-square ms-3"></i>
             <i class="fab fa-instagram-square ms-3"></i>
