--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 
 <body class="d-flex flex-column h-100 main-bg">
 
-    <!-- Navigation -->
+    <!-- Navigation, code altered from "I Think Therefore I Blog" -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
@@ -66,7 +66,7 @@
         {% endblock content %}
     </main>
 
-    <!-- Footer -->
+    <!-- Footer, code taken from "I Think Therefore I Blog" -->
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center">Follow us: <i class="fab fa-facebook-square ms-3"></i>
             <i class="fab fa-twitter-square ms-3"></i>
