--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Home Page</h1>
-<div class="hero-image">
-    <img src="https://images.pexels.com/photos/1639562/pexels-photo-1639562.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+<div class="container-fluid bg-image text-light">
+    <div class="row">
+        <div class="col-md-6 offset-md-2 custom-margin">
+        <h1 class="text-light heading">Welcome To SamBurger!</h1>
+            <button type="submit" class="btn btn-light btn-lg"><a href="{% url 'booking' %}"
+                    class="text-dark">Booking</a></button>
+        </div>
+    </div>
 </div>
-<button type="submit" class="btn btn-dark btn-lg"><a href="{% url 'booking' %}">Booking</a></button>
 {%endblock%}
