--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <div class="row">
         <div class="col-md-6 offset-md-2 custom-margin">
         <h1 class="text-light heading">Welcome To SamBurger!</h1>
-            <button type="submit" class="btn btn-light btn-lg"><a href="{% url 'booking' %}"
-                    class="text-dark">Booking</a></button>
+            <a href="{% url 'booking' %}"
+                class="btn btn-outline-light btn-lg">Book Now!</a>
         </div>
     </div>
 </div>
