--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -10,11 +10,11 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 mt-3 offset-md-2">
-            <h3>{% trans "Sign In" %}</h3>
+            <h3 class="booking-header">{% trans "Sign In" %}</h3>
 
-            <p>{% blocktrans %}Welcome back to the code|star blog. To leave a comment or like a post, please log in. If
+            <p>{% blocktrans %}Welcome to SamBurger. To make a booking, please log in. If
                 you
-                have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
+                have not created an account yet, then <a class="link text-primary" href="{{ signup_url }}">sign up</a>
                 first.{% endblocktrans %}</p>
         </div>
     </div>
@@ -26,7 +26,7 @@
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="btn btn-signup right" type="submit">{% trans "Sign In" %}</button>
+                <button class="btn btn-signup right btn-dark" type="submit">{% trans "Sign In" %}</button>
             </form>
         </div>
     </div>
