--- a/templates/booking_details.html
+++ b/templates/booking_details.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-6">
-                <h1>Your Bookings:</h1>
+                <h1 class="booking-header">Your Bookings</h1>
                 {% if success_message %}
                 <h3 class="text-success">{{ success_message }}</h3>
                 {% endif %}
