--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,23 +5,23 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container text-center">
     <div class="row">
         <div class="col-md-8 mt-3 offset-md-2">
-            <h3>{% trans "Sign Out" %}</h3>
+            <h3 class="booking-header">{% trans "Sign Out" %}</h3>
 
             <p>{% trans 'Are you sure you want to sign out?' %}</p>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-8 mt-3 offset-md-2">
+        <div class="col-md-8 offset-md-2">
 
             <form method="post" action="{% url 'account_logout' %}">
                 {% csrf_token %}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="btn btn-signup right" type="submit">{% trans 'Sign Out' %}</button>
+                <button class="btn btn-signup right btn-dark" type="submit">{% trans 'Sign Out' %}</button>
             </form>
         </div>
     </div>
