--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -8,10 +8,10 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 mt-3 offset-md-2">
-            <h3>{% trans "Sign Up" %}</h3>
+            <h3 class="booking-header">{% trans "Sign Up" %}</h3>
 
-            <p>{% blocktrans %}Welcome back to the code|star blog. Do you already have an account? Then please <a
-                    class="link" href="{{ login_url }}">sign in</a> instead.{% endblocktrans %}</p>
+            <p>{% blocktrans %}Welcome to SamBurger. Do you already have an account? Then please <a
+                    class="link text-primary" href="{{ login_url }}">Sign In</a> instead.{% endblocktrans %}</p>
         </div>
     </div>
     <div class="row">
@@ -22,7 +22,7 @@
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="btn btn-signup right" type="submit">{% trans "Sign Up" %} &raquo;</button>
+                <button class="btn btn-signup right btn-dark" type="submit">{% trans "Sign Up" %} &raquo;</button>
             </form>
         </div>
     </div>
