--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,13 @@
     <div class="row">
         <div class="col-md-6 offset-md-2 custom-margin">
         <h1 class="text-light heading">Welcome To SamBurger!</h1>
+            <p>Where Quality Meets Flavor</p>
+            {% if user.is_authenticated %}
             <a href="{% url 'booking' %}"
                 class="btn btn-outline-light btn-lg">Book Now!</a>
+            {% else %}
+            <a href="{% url 'account_signup' %}" class="btn btn-outline-light btn-lg">Register To Book A Table!</a>
+            {% endif %}
         </div>
     </div>
 </div>
