--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,12 +1,34 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container">
+    <div class="container-fluid">
         <div class="row justify-content-md-center">
-            <div class="col-md">
-                <h1>Menu:</h1>
-                <ul>
-                    <li></li>
+            <div class="col-md-6 text-center w-100">
+                <h1 class="booking-header">Menu</h1>
+                <p style="color: #301606;"><b>(All Burgers come with Chips on the side)</b></p>
+                <ul class="list-group">
+                    <hr>
+                    <li><h4 class="burger">The Samburger</h4>
+                        <p class="ingredients">Cheddar Cheese, Burger Sauce, Onion, <br>Lettuce, Tomato, Pickles</p>  
+                        <p>Price: £13.99</p>  
+                    </li>
+                    <hr>
+                    <li><h4 class="burger">Hot Cheddar</h4>
+                        <p class="ingredients">Cheddar Cheese, Yellow Mustard, Ketchup, <br>Chili, Caramelized Onion, Pickles</p>  
+                        <p>Price: £11.99</p>  
+                    </li>
+                    <hr>
+                    <li><h4 class="burger">BBQ Bacon</h4>
+                        <p class="ingredients">Cheddar Cheese, BBQ Sauce, Bacon, <br> Mayonnaise, Onion, Pickles</p>  
+                        <p>Price: £13.99</p>  
+                    </li>
+                    <hr>
+                    <li><h4 class="burger">Truffle Burger</h4>
+                        <p class="ingredients">Cheddar Cheese, Truffle Mayonnaise, Bacon<br> Pickled Onion, Lettuce</p>  
+                        <p>Price: £14.99</p>  
+                    </li>
+                    <hr>
+                    
                 </ul>
             </div>
         </div>
