--- a/templates/booking_form.html
+++ b/templates/booking_form.html
@@ -19,7 +19,7 @@
                 <button type="submit" class="btn btn-dark btn-md">Submit</button>
             </form>
         </div>
-        <div class="col-md-6 square bg-color text-light">
+        <div class="col-md-6 bg-color text-light">
             <div class="m-4">
                 <h4 class="booking-header text-center">Secure your table!</h4>
                 <p class="form-p">Whether it's a casual lunch or a special occasion, we've got a seat waiting just for you. 
