--- a/templates/base.html
+++ b/templates/base.html
@@ -70,11 +70,13 @@
     </main>
 
     <!-- Footer, code taken from "I Think Therefore I Blog" -->
-    <footer class="footer mt-auto py-3 bg-light">
-        <p class="m-0 text-center">Follow us: <i class="fab fa-facebook-square ms-3"></i>
-            <i class="fab fa-twitter-square ms-3"></i>
-            <i class="fab fa-instagram-square ms-3"></i>
-            <i class="fab fa-youtube-square ms-3"></i></p>
+    <footer class="footer mt-auto py-3 bg-white">
+        <p class="m-0 text-center">Follow us: 
+            <a class="text-dark" href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook-square ms-3"></i></a>
+            <a class="text-dark" href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter-square ms-3"></i></a>
+            <a class="text-dark" href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram-square ms-3"></i></a>
+            <a class="text-dark" href="http://www.youtube.com" target="_blank"><i class="fab fa-youtube-square ms-3"></i></a>
+        </p>
     </footer>
 </body>
 
