--- a/templates/delete_booking.html
+++ b/templates/delete_booking.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container-fluid">
-    <div class="row justify-content-md-center">
+    <div class="row justify-content-md-center mt-4">
         <div class="col-md-6 text-center">
             {% if object.customer == user %}
             <form method="post">
