--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,14 @@
 {% block content %}
 <div class="container-fluid bg-image text-light">
     <div class="row">
-        <div class="col-md-6 offset-md-2 custom-margin">
-        <h1 class="text-light heading">Welcome To SamBurger!</h1>
-            <p>Where Quality Meets Flavor</p>
+        <div class="col-md-6 offset-md-2 custom-margin responsive-header">
+        <h1 class="text-light heading m-0">Welcome To SamBurger!</h1>
+            <h5 class="">Where Quality Meets Flavor</h5>
             {% if user.is_authenticated %}
             <a href="{% url 'booking' %}"
-                class="btn btn-outline-light btn-lg">Book Now!</a>
+                class="btn btn-outline-light btn-lg mt-3">Book Now!</a>
             {% else %}
-            <a href="{% url 'account_signup' %}" class="btn btn-outline-light btn-lg">Register To Book A Table!</a>
+            <a href="{% url 'account_signup' %}" class="btn btn-outline-light btn-lg mt-3 btn-responsive">Register To Book A Table!</a>
             {% endif %}
         </div>
     </div>
