--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,7 +21,7 @@ body {
 
 
 .bg-image {
-    background: url(https://images.pexels.com/photos/1199960/pexels-photo-1199960.jpeg) no-repeat center center / cover;
+    background: url(https://res.cloudinary.com/dq4dnlzta/image/upload/v1696710233/pexels-photo-1199960_saspmj.jpg) no-repeat center center / cover;
     height: 95vh;
 }
 
@@ -96,7 +96,7 @@ label:first-of-type {
 }
 
 input, select {
-    padding: .2.5em;
+    padding: 0.2em;
     border: solid 1px;
 }
 
@@ -136,6 +136,10 @@ input, textarea {
     color: red;
 }
 
+input[type="checkbox"] {
+    width: auto;
+}
+
 
 /* --------------------------------------------------------------------------- Media Queries */
 @media screen and (max-width: 990px) {
@@ -149,7 +153,6 @@ input, textarea {
 
     .container {
         min-width: 100%;
-        padding: 0;
     }
 
     .custom-row {
