--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,15 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html class="h-100">
+<html class="h-100" lang="en">
 
 <head>
     <title>SamBurger</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dq4dnlzta/image/upload/v1696673596/favicon_jkoz4w.ico">
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dq4dnlzta/image/upload/v1696712092/favicon_j9lkzo.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="description" content="Burger restaurant in Gothenburg, Sweden">
     <meta name="keywords" content="restaurant, hamburger, gothenburg, sweden">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">S<span class="red-o">A</span>M<span
-                        class="thin"><i class="fas fa-hamburger"></i>burger</span></span></span></a>
+                        class="thin"><i class="fas fa-hamburger"></i>burger</span></span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
