--- a/templates/menu.html
+++ b/templates/menu.html
@@ -7,28 +7,28 @@
                 <h1 class="booking-header">Menu</h1>
                 <p style="color: #301606;"><b>(All Burgers come with Chips on the side)</b></p>
                 <ul class="list-group">
-                    <hr>
-                    <li><h4 class="burger">The Samburger</h4>
+                    <li>
+                        <hr>
+                        <h4 class="burger">The Samburger</h4>
                         <p class="ingredients">Cheddar Cheese, Burger Sauce, Onion, <br>Lettuce, Tomato, Pickles</p>  
                         <p>Price: £13.99</p>  
+                        <hr>
                     </li>
-                    <hr>
                     <li><h4 class="burger">Hot Cheddar</h4>
                         <p class="ingredients">Cheddar Cheese, Yellow Mustard, Ketchup, <br>Chili, Caramelized Onion, Pickles</p>  
-                        <p>Price: £11.99</p>  
+                        <p>Price: £11.99</p>
+                        <hr>
                     </li>
-                    <hr>
                     <li><h4 class="burger">BBQ Bacon</h4>
                         <p class="ingredients">Cheddar Cheese, BBQ Sauce, Bacon, <br> Mayonnaise, Onion, Pickles</p>  
-                        <p>Price: £13.99</p>  
+                        <p>Price: £13.99</p>
+                        <hr>
                     </li>
-                    <hr>
                     <li><h4 class="burger">Truffle Burger</h4>
                         <p class="ingredients">Cheddar Cheese, Truffle Mayonnaise, Bacon<br> Pickled Onion, Lettuce</p>  
                         <p>Price: £14.99</p>  
+                        <hr>
                     </li>
-                    <hr>
-                    
                 </ul>
             </div>
         </div>
