--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+/* ------------------------------------------------------------- Fonts & Structural CSS */
 @import url('https://fonts.googleapis.com/css2?family=Prompt&display=swap');
 
 body {
@@ -27,8 +28,7 @@ body {
 
 .bg-image-booking {
     padding: 0;
-    background: url(
-        https://images.pexels.com/photos/1484516/pexels-photo-1484516.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1) no-repeat center center / cover;
+    background: url(https://images.pexels.com/photos/1484516/pexels-photo-1484516.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1) no-repeat center center / cover;
     background-attachment: scroll;
     height: 100%;
     min-width: 100%;
@@ -85,7 +85,8 @@ form {
     padding-left: 1.5em;
 }
 
-label, button {
+label,
+button {
     display: block;
     margin-top: 1em;
     margin-bottom: 4px;
@@ -95,7 +96,8 @@ label:first-of-type {
     margin-top: 0;
 }
 
-input, select {
+input,
+select {
     padding: 0.2em;
     border: solid 1px;
 }
@@ -109,7 +111,8 @@ select {
     width: 25%;
 }
 
-input, textarea {
+input,
+textarea {
     width: 100%;
 }
 
